<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/create_account_layout"
    android:background="@color/BackgroundColorScreen">
    <EditText
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_25sdp"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/nom"
        android:hint="@string/nom"
        android:background="@color/white"
        android:gravity="center"
        android:layout_marginTop="@dimen/_30sdp" />

    <EditText
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_25sdp"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/prenom"
        android:background="@color/white"
        android:layout_below="@+id/nom"
        android:hint="@string/prenom"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp" />

    <EditText
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_25sdp"
        android:id="@+id/email"
        android:hint="@string/email"
        android:background="@color/white"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="textWebEmailAddress"
        android:layout_centerHorizontal="true"

        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_below="@+id/prenom" />

    <EditText
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_below="@+id/email"
        android:inputType="textPassword"
        android:id="@+id/create_password"
        android:hint="@string/password"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp" />

    <Button
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_35sdp"
        android:text="@string/create"
        android:layout_below="@+id/create_password"
        android:id="@+id/create_button"
        style="@style/com_facebook_button"
        android:background="@drawable/custom_btn"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp" />

</RelativeLayout>