<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_layout"
    android:background="@color/BackgroundColor"
    android:layout_gravity="center_vertical">

    <TextView
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="RestoPic"
        android:textColor="@color/white"
        android:id="@+id/restopic"
        android:shadowColor="#00ccff"
        android:shadowRadius="1.5"
        android:shadowDx="1"
        android:shadowDy="1"
        android:textSize="@dimen/_60sdp"
        android:textStyle="bold|italic"
        android:layout_marginTop="@dimen/_60sdp"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <com.facebook.login.widget.LoginButton
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_46sdp"
        android:id="@+id/facebook"
        android:textSize="@dimen/_12sdp"
        android:layout_below="@+id/restopic"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp">
    </com.facebook.login.widget.LoginButton>


    <EditText
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_25sdp"
        android:id="@+id/email"
        android:hint="@string/email"
        android:background="@color/white"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:inputType="textWebEmailAddress"
        android:layout_below="@+id/facebook"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:drawableLeft="@drawable/password"
        android:paddingLeft="@dimen/_2sdp" />

    <EditText
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_25sdp"
        android:inputType="textPassword"
        android:id="@+id/login_password"
        android:hint="@string/password"
        android:background="@color/white"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_1sdp"
        android:drawableLeft="@drawable/user"
        android:paddingLeft="@dimen/_2sdp" />

    <Button
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_36sdp"
        android:text="@string/connect"
        android:id="@+id/connect"
        android:textSize="@dimen/_10sdp"
        style="@style/com_facebook_button"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_btn" />

    <Button
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_36sdp"
        android:text="@string/account"
        android:id="@+id/account"
        style="@style/com_facebook_button"
        android:onClick="passCreate"
        android:textSize="@dimen/_10sdp"
        android:layout_below="@+id/connect"
        android:background="@drawable/custom_btn"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_password"
        android:text="@string/forgot_password"
        android:onClick="ResetPassword"
        android:clickable="true"
        android:textColor="@color/white"
        android:layout_below="@+id/account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp" />




</RelativeLayout>